# ssm-model-reduction

./: .gitignore  pyproject.toml
notebooks/: vortex-shedding.ipynb
scripts/: coordinate_mapping.py
src/ssm_model_reduction/: __init__.py
src/ssm_model_reduction/utils/: map.py
