[project]
name = "ssm-model-reduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "findiff",
    "matplotlib",
    "numpy==1.24.3",
    "plotly",
    "scikit-learn",
    "scipy",
    "ssmlearnpy",
]

[tool.uv.sources]
ssmlearnpy = { git = "https://github.com/haller-group/SSMLearnPy" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
